--- a/Prac_1.ipynb
+++ b/Prac_1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO+Iva+RQQBTS5sjW361nS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +27,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8mBvbCl-r0A2",
-        "outputId": "17f7323f-d0d7-46e0-ec83-c40049e2e3de"
+        "outputId": "a7e29f58-27e3-4ead-80fc-1976b8723862"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello World!\n"
+            "Hello Wo!\n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello World!\")"
+        "print(\"Hello Wo!\")"
       ]
     }
   ]
