--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFD79JOQdj3Pg3U0fzrwkE",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNVcSyYOYvXJefKXdkqv3ae",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,6 +277,131 @@
             " [12 15 18]]\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hfYVa8iQTaUL"
+      },
+      "source": [
+        "## Task 1: Create a Linear Dataset\n",
+        "\n",
+        "Your goal is to create a simple dataset consisting of a single feature and a label as follows:\n",
+        "\n",
+        "1. Assign a sequence of integers from 6 to 20 (inclusive) to a NumPy array named `feature`.\n",
+        "2. Assign 15 values to a NumPy array named `label` such that:\n",
+        "\n",
+        "```\n",
+        "   label = (3)(feature) + 4\n",
+        "```\n",
+        "For example, the first value for `label` should be:\n",
+        "\n",
+        "```\n",
+        "  label = (3)(6) + 4 = 22\n",
+        " ```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {
+        "id": "qK9UF2rUc3Y_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3ebfcd2e-5697-4b74-f583-456850153f4a"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]\n",
+            "[22 25 28 31 34 37 40 43 46 49 52 55 58 61 64]\n"
+          ]
+        }
+      ],
+      "source": [
+        "feature = np.arange(6,21) # write your code here\n",
+        "print(feature)\n",
+        "label = (feature*3)+4   # write your code here\n",
+        "print(label)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KjtIAYvMTPGl"
+      },
+      "outputs": [],
+      "source": [
+        "#@title Double-click to see a possible solution to Task 1.\n",
+        "feature = np.arange(6, 21)\n",
+        "print(feature)\n",
+        "label = (feature * 3) + 4\n",
+        "print(label)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RNsjGYRj87PB"
+      },
+      "source": [
+        "## Task 2: Add Some Noise to the Dataset\n",
+        "\n",
+        "To make your dataset a little more realistic, insert a little random noise into each element of the `label` array you already created. To be more precise, modify each value assigned to `label` by adding a *different* random floating-point value between -2 and +2. \n",
+        "\n",
+        "Don't rely on broadcasting. Instead, create a `noise` array having the same dimension as `label`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {
+        "id": "HF-flFfs9r0q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c6b662c-a12e-40de-f591-a0c823032655"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-0.23295847  0.40980434 -1.52240765  1.89256782 -1.88496263  1.88943428\n",
+            " -1.41987379 -1.11287534  0.69820687 -1.8595668  -0.15509623 -1.58022819\n",
+            " -1.96873442  0.82123047 -1.13081466]\n",
+            "[21.76704153 25.40980434 26.47759235 32.89256782 32.11503737 38.88943428\n",
+            " 38.58012621 41.88712466 46.69820687 47.1404332  51.84490377 53.41977181\n",
+            " 56.03126558 61.82123047 62.86918534]\n"
+          ]
+        }
+      ],
+      "source": [
+        "noise = (np.random.random([15])*4)-2    # write your code here\n",
+        "print(noise)\n",
+        "label = label+noise    # write your code here\n",
+        "print(label)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7chgYKrC93np"
+      },
+      "outputs": [],
+      "source": [
+        "#@title Double-click to see a possible solution to Task 2.\n",
+        "\n",
+        "noise = (np.random.random([15]) * 4) - 2\n",
+        "print(noise)\n",
+        "label = label + noise \n",
+        "print(label)"
       ]
     }
   ]
