--- a/Pandas_1.ipynb
+++ b/Pandas_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgMJuyrO6dIVew9a/pHyya",
+      "authorship_tag": "ABX9TyOHhGD54Oj1Uwx/k4TBxMFn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mmfSJ2NpLDg8",
-        "outputId": "625730cc-a876-492f-8291-6c2df97a7b49"
+        "outputId": "9481becc-5904-4e41-ce36-63a4b6a7868b"
       },
-      "execution_count": 21,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,9 +124,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GhBw5dcbNiMx",
-        "outputId": "ef24111f-de53-4407-d381-896ee7640746"
+        "outputId": "0c9133ea-661c-4806-c224-fb109856ecd1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2RqxVE3OMDx",
-        "outputId": "f9b54abf-8d3d-46a0-8b18-09d657ba5e06"
+        "outputId": "f5e6d97f-d606-4e5a-df00-8a217b212b5e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb5f9758-c32b-49c7-f9cd-498d454fa571"
+        "outputId": "1a8b0f73-8f64-4673-aaa7-45682b7585b1"
       },
       "source": [
         "datas = np.random.randint(low=0, high=101, size=(3,4))\n",
@@ -251,23 +251,23 @@
         "my_DataFrame['Janet'] = my_DataFrame['Tahani'] + my_DataFrame['Jason']\n",
         "print(my_DataFrame)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "   Eleanor  Chidi  Tahani  Jason\n",
-            "0       16     15      43     90\n",
-            "1       33     41      71     74\n",
-            "2       84     66      83     54 \n",
+            "0       53     21      95     70\n",
+            "1       68     28      14     66\n",
+            "2       48     66      10     76 \n",
             "\n",
-            "The value in the cell of row #1 of the Eleanor column: 33\n",
+            "The value in the cell of row #1 of the Eleanor column: 68\n",
             "\n",
             "   Eleanor  Chidi  Tahani  Jason  Janet\n",
-            "0       16     15      43     90    133\n",
-            "1       33     41      71     74    145\n",
-            "2       84     66      83     54    137\n"
+            "0       53     21      95     70    165\n",
+            "1       68     28      14     66     80\n",
+            "2       48     66      10     76     86\n"
           ]
         }
       ]
@@ -305,6 +305,119 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bh7MeyafemNL"
+      },
+      "source": [
+        "## Copying a DataFrame (optional)\n",
+        "\n",
+        "Pandas provides two different ways to duplicate a DataFrame:\n",
+        "\n",
+        "* **Referencing.** If you assign a DataFrame to a new variable, any change to the DataFrame or to the new variable will be reflected in the other. \n",
+        "* **Copying.** If you call the `pd.DataFrame.copy` method, you create a true independent copy.  Changes to the original DataFrame or to the copy will not be reflected in the other. \n",
+        "\n",
+        "The difference is subtle, but important."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using Reference\n",
+        "print(\"Experiment with a reference:\")\n",
+        "ref_dataframe = my_DataFrame\n",
+        "\n",
+        "print(\"Existing value of my_DataFrame: %d\" %my_DataFrame['Chidi'][1])\n",
+        "print(\"Existing value of ref_dataframe: %d \\n\" %ref_dataframe['Chidi'][1])\n",
+        "\n",
+        "#Modify a cell in my_DataFrame\n",
+        "my_DataFrame.at[1,'Chidi'] = my_DataFrame['Chidi'][1]+2\n",
+        "\n",
+        "print(\"Updated my_DataFrame: %d\" %my_DataFrame['Chidi'][1])\n",
+        "print(\"Updated ref_dataframe: %d\" %ref_dataframe['Chidi'][1])"
+      ],
+      "metadata": {
+        "id": "Jzyz64H9uCwR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f01e3ab-c6f8-4bed-b3e0-a326a660b902"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experiment with a reference:\n",
+            "Existing value of my_DataFrame: 38\n",
+            "Existing value of ref_dataframe: 38 \n",
+            "\n",
+            "Updated my_DataFrame: 40\n",
+            "Updated ref_dataframe: 40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using copy\n",
+        "print(\"Experiment with a copy:\")\n",
+        "copy_DataFrame = my_dataframe.copy()\n",
+        "\n",
+        "print(\"Existing value of temp row 1 in real: %d\" %my_dataframe['temperature'][1])\n",
+        "print(\"Existing value of temp row 1 in copied: %d\\n\" %copy_DataFrame['temperature'][1])\n",
+        "\n",
+        "#Modify a cell in my_dataframe\n",
+        "print(\"Modify a cell in my_dataframe\")\n",
+        "my_dataframe.at[1,'temperature'] = my_dataframe['temperature'][1]+2\n",
+        "\n",
+        "print(\"Updated value of temp row 1 in real: %d\" %my_dataframe['temperature'][1])\n",
+        "print(\"Updated value of temp row 1 in copied: %d \\n\" %copy_DataFrame['temperature'][1])\n",
+        "\n",
+        "print(\"Existing value of activity row 0 in real: %d\" %my_dataframe['activity'][0])\n",
+        "print(\"Existing value of activity row 0 in copied: %d\\n\" %copy_DataFrame['activity'][0])\n",
+        "\n",
+        "#Modify a cell in copy_dataframe\n",
+        "print(\"Modify a cell in copy_dataframe\")\n",
+        "copy_DataFrame.at[0, 'activity'] = copy_DataFrame['activity'][0]+4\n",
+        "\n",
+        "print(\"Updated value of activity row 0 in real: %d\" %my_dataframe['activity'][0])\n",
+        "print(\"Updated value of activity row 0 in copied: %d\" %copy_DataFrame['activity'][0])\n"
+      ],
+      "metadata": {
+        "id": "ky210skwY072",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f01953d0-82e4-4261-e69c-3cb1b201c528"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experiment with a copy:\n",
+            "Existing value of temp row 1 in real: 23\n",
+            "Existing value of temp row 1 in copied: 23\n",
+            "\n",
+            "Modify a cell in my_dataframe\n",
+            "Updated value of temp row 1 in real: 25\n",
+            "Updated value of temp row 1 in copied: 23 \n",
+            "\n",
+            "Existing value of activity row 0 in real: 6\n",
+            "Existing value of activity row 0 in copied: 6\n",
+            "\n",
+            "Modify a cell in copy_dataframe\n",
+            "Updated value of activity row 0 in real: 6\n",
+            "Updated value of activity row 0 in copied: 10\n"
+          ]
+        }
+      ]
     }
   ]
 }
